--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.2.2",
     "@neondatabase/serverless": "0.9.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.40.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "0.30.10",
-    "drizzle-zod": "0.5.1",
+    "drizzle-zod": "^0.5.1",
     "hono": "^4.4.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
