--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
+    "plaid": "^24.0.0",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-papaparse": "^4.4.0",
+    "react-plaid-link": "^3.5.2",
     "react-select": "^5.8.0",
     "react-use": "^17.5.0",
     "recharts": "^2.12.7",
